2010-10-18  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-client.el (soap-l2fq): new function
	(soap-wsdl-get): accept fully qualified names + doc update
	(soap-l2wsdl): removed
	(soap-resolve-references-for-operation): allow unnamed message
	parts for inputs outputs and faults.

2010-10-16  Alexandru Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-client.el (soap-decode-any-type, soap-decode-array): decode
	arrays of anyType values.

2010-10-15  Alexandru Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-client.el (soap-default-xsd-types)
	(soap-default-soapenc-types): add base64Binary basic type
	(soap-decode-any-type): new defun
	(soap-decode-basic-type): decode anyType nodes and base64Binary
	(soap-parse-response): bind the wsdl to *current-wsdl*
	(soap-decode-any-type): use *current-wsdl*

2010-10-15  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-client.el (*soap-encoded-namespaces*): doc update
	(soap-encode-value): ensure XML-TAG is a string before passing it
	on to the encoders.  Also doc update and param order change.
	(soap-encode-basic-type, soap-encode-sequence-type)
	(soap-encode-array-type): assume XML-TAG is a string

2010-10-13  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-client.el (soap-default-soapenc-types): new function
	(soap-parse-wsdl): add the default types from the soapenc
	namespace to the wsdl document.  Fixes bug #3

2010-10-12  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-client.el (soap-extract-xmlns): if the node has a
	targetNamespace attribute define a "tns" alias for that namespace.
	(soap-wk2l): documentation update

2010-10-10  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* jira2.el (jira2-link-issue): add the "X-Atlassian-Token" header
	to the HTTP request.

2010-06-01  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* jira2.el (jira2-user-login-name): new variable
	(jira2-login): update jira2-user-login-name on a succesful login.
	(jira2-issue-key, jira2-issue-owner, jira2-issue-status): new functions
